// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Lift Page with chinups 1`] = `
<div
  className="lift-page__wrapper"
>
  <div
    className="lift-page"
  >
    <div
      className="lift-page__card card"
    >
      <h2>
        Chin-Ups
      </h2>
      <div>
        <h3>
          Complete:
        </h3>
        <p
          className="lift-page__chinup-title"
        >
          3 sets of
        </p>
        <div
          className="lift-page__chinups"
        >
          <div
            className="lift-page__chinup"
          >
            <p>
              2
            </p>
            <span>
              negatives
            </span>
          </div>
          <div
            className="lift-page__chinup"
          >
            <p>
              3
            </p>
            <span>
              chin-ups
            </span>
          </div>
        </div>
        <h3>
          Enter your results:
        </h3>
        <p>
          Were you able to complete all sets and reps?
        </p>
        <Button
          clickHandler={[Function]}
          disabled={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Yes
        </Button>
        <Button
          clickHandler={[Function]}
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          No
        </Button>
      </div>
    </div>
    <button
      className="lift-page__action-button action-button"
      onClick={[Function]}
    >
      <LeftArrowIcon
        fill="rgba(26, 33, 46, .84)"
        size={24}
      />
      <span>
        Back
      </span>
    </button>
  </div>
</div>
`;

exports[`should render Lift Page with props 1`] = `
<div
  className="lift-page__wrapper"
>
  <div
    className="lift-page"
  >
    <div
      className="lift-page__card card"
    >
      <h2>
        Row
      </h2>
      <div
        className="lift-page__tables"
      >
        <div
          className="lift-page__table"
          id="warm-up"
        >
          <h3>
            Warm-Up
          </h3>
          <div
            className="lift-page__sets"
            key="0"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                1
              </span>
              <p>
                5 reps @
                44
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  0
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  0
                </p>
              </div>
            </div>
          </div>
          <div
            className="lift-page__sets"
            key="1"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                2
              </span>
              <p>
                5 reps @
                57.5
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  6.8
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  6.8
                </p>
              </div>
            </div>
          </div>
          <div
            className="lift-page__sets"
            key="2"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                3
              </span>
              <p>
                5 reps @
                86.3
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  21.1
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  21.1
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="lift-page__table"
        >
          <h3>
            Work
          </h3>
          <div
            className="lift-page__sets"
            key="0"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                1
              </span>
              <p>
                5 reps
                 @
                115
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  35.5
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  35.5
                </p>
              </div>
            </div>
          </div>
          <div
            className="lift-page__sets"
            key="1"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                2
              </span>
              <p>
                5 reps
                 @
                115
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  35.5
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  35.5
                </p>
              </div>
            </div>
          </div>
          <div
            className="lift-page__sets"
            key="2"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                3
              </span>
              <p>
                AMRAP*
                 @
                115
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  35.5
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  35.5
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p>
        *as many reps as possible 
      </p>
      <h3
        className="lift-page__results-title"
      >
        Enter your results
      </h3>
      <p>
        On your last set how many reps did you complete?
      </p>
      <Button
        clickHandler={[Function]}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Less than 5
      </Button>
      <Button
        clickHandler={[Function]}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Greater than 5
      </Button>
      <Button
        clickHandler={[Function]}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Greater than 10
      </Button>
    </div>
    <button
      className="lift-page__action-button action-button"
      onClick={[Function]}
    >
      <LeftArrowIcon
        fill="rgba(26, 33, 46, .84)"
        size={24}
      />
      <span>
        Back
      </span>
    </button>
  </div>
</div>
`;

exports[`should render Lift Page without props 1`] = `
<div
  className="lift-page__wrapper"
>
  <div
    className="lift-page"
  >
    <div
      className="lift-page__card card"
    >
      <h2 />
      <div
        className="lift-page__tables"
      >
        <div
          className="lift-page__table"
          id="warm-up"
        >
          <h3>
            Warm-Up
          </h3>
          <div
            className="lift-page__sets"
            key="0"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                1
              </span>
              <p>
                5 reps @
                44
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  0
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  0
                </p>
              </div>
            </div>
          </div>
          <div
            className="lift-page__sets"
            key="1"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                2
              </span>
              <p>
                5 reps @
                44
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  0
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  0
                </p>
              </div>
            </div>
          </div>
          <div
            className="lift-page__sets"
            key="2"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                3
              </span>
              <p>
                5 reps @
                44
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  0
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  0
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="lift-page__table"
        >
          <h3>
            Work
          </h3>
          <div
            className="lift-page__sets"
            key="0"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                1
              </span>
              <p>
                5 reps
                 @
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  NaN
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  NaN
                </p>
              </div>
            </div>
          </div>
          <div
            className="lift-page__sets"
            key="1"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                2
              </span>
              <p>
                5 reps
                 @
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  NaN
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  NaN
                </p>
              </div>
            </div>
          </div>
          <div
            className="lift-page__sets"
            key="2"
          >
            <div
              className="lift-page__set"
            >
              <span>
                Set 
                3
              </span>
              <p>
                AMRAP*
                 @
                lbs
              </p>
            </div>
            <div
              className="lift-page__distributed"
            >
              <div
                className="lift-page__distributed-item"
                key="0"
              >
                <span>
                  LEFT
                </span>
                <p>
                  NaN
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="1"
              >
                <span>
                  BAR
                </span>
                <p>
                  44
                </p>
              </div>
              <div
                className="lift-page__distributed-item"
                key="2"
              >
                <span>
                  RIGHT
                </span>
                <p>
                  NaN
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p>
        *as many reps as possible 
      </p>
      <h3
        className="lift-page__results-title"
      >
        Enter your results
      </h3>
      <p>
        On your last set how many reps did you complete?
      </p>
      <Button
        clickHandler={[Function]}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Less than 5
      </Button>
      <Button
        clickHandler={[Function]}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Greater than 5
      </Button>
      <Button
        clickHandler={[Function]}
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Greater than 10
      </Button>
    </div>
    <button
      className="lift-page__action-button action-button"
      onClick={[Function]}
    >
      <LeftArrowIcon
        fill="rgba(26, 33, 46, .84)"
        size={24}
      />
      <span>
        Back
      </span>
    </button>
  </div>
</div>
`;
